# at32f4xx-hal

./: Cargo.toml
.cargo/: config.toml
examples/: adc.rs  blinky.rs  pwm.rs  qei.rs  serial-bidirect.rs  serial.rs  signature.rs  timer-periph.rs  timer-syst.rs
src/: adc.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  qei.rs  serial.rs  signature.rs  timer.rs  uart.rs
src/adc/: f4.rs
src/crm/: enable.rs  mod.rs  pll.rs
src/crm/enable/: f1.rs  f4.rs
src/gpio/: alt.rs  convert.rs  erased.rs  f1.rs  f4.rs  partially_erased.rs
src/gpio/alt/: f1.rs  f4.rs
src/serial/: hal.rs  uart_impls.rs
src/timer/: counter.rs  delay.rs  hal.rs  pwm.rs
