[package]
name = "at32f4xx-hal"
version = "0.0.1"
edition = "2021"

[dependencies]
at32f4xx-pac = { git = "https://github.com/kossnikita/at32f4xx-pac.git" }
defmt = { version = "0.3", optional = true}
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
nb = "1.1"
embedded-hal = { features = ["unproven"], version = "0.2.7" }
embedded-hal-nb = "1.0.0-rc.1"
fugit = "0.3.7"
embedded-storage = "0.3"
bitflags = "2.4.0"
fugit-timer = "0.1.3"

[dev-dependencies]
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = [ "print-defmt" ] }

[features]
at32a403a = ["at32f4xx-pac/at32a403a", "a403a-peripheral"]
at32f402 = ["at32f4xx-pac/at32f402", "f402-peripheral"]
at32f403 = ["at32f4xx-pac/at32f403", "f403-peripheral"]
at32f403a = ["at32f4xx-pac/at32f403a", "f403a-peripheral"]
at32f405 = ["at32f4xx-pac/at32f405", "f405-peripheral"]
at32f407 = ["at32f4xx-pac/at32f407", "f407-peripheral"]
at32f413 = ["at32f4xx-pac/at32f413", "f413-peripheral"]
at32f415 = ["at32f4xx-pac/at32f415", "f415-peripheral"]
at32f421 = ["at32f4xx-pac/at32f421", "f421-peripheral"]
at32f423 = ["at32f4xx-pac/at32f423", "f423-peripheral"]
at32f425 = ["at32f4xx-pac/at32f425", "f425-peripheral"]
at32f435 = ["at32f4xx-pac/at32f435", "f435-peripheral"]
at32f437 = ["at32f4xx-pac/at32f437", "f437-peripheral"]
at32wb415 = ["at32f4xx-pac/at32wb415", "wb415-peripheral"]

a403a-peripheral = []
f402-peripheral = []
f403-peripheral = []
f403a-peripheral = ["gpiod", "gpioe"]
f405-peripheral = []
f407-peripheral = ["gpiod", "gpioe"]
f413-peripheral = []
f415-peripheral = ["gpiod", "gpiof"]
f421-peripheral = ["gpiof"]
f423-peripheral = []
f425-peripheral = []
f435-peripheral = []
f437-peripheral = []
wb415-peripheral = []

gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioi = []

[[example]]
name = "blinky"

[[example]]
name = "pwm"

[[example]]
name = "timer-periph"

[[example]]
name = "timer-syst"
