[package]
name = "at32f4xx-hal"
version = "0.0.1"
edition = "2021"

[dependencies]
at32f4xx-pac = { git = "https://github.com/kossnikita/at32f4xx-pac.git" }
defmt = { version = "0.3", optional = true }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
nb = "1.1"
embedded-hal = { features = ["defmt-03"], version = "1.0.0-rc.1" }
embedded-hal-nb = "1.0.0-rc.1"
embedded-io = "0.6"
fugit = "0.3.7"
embedded-storage = "0.3"
bitflags = "2.4.0"
fugit-timer = "0.1.3"
void = { default-features = false, version = "1.0.2" }

[dev-dependencies]
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
at32a403a = ["at32f4xx-pac/at32a403a", "a403a-peripheral"]
at32f402 = ["at32f4xx-pac/at32f402", "f402-peripheral"]
at32f403 = ["at32f4xx-pac/at32f403", "f403-peripheral"]
at32f403a = ["at32f4xx-pac/at32f403a", "f403a-peripheral"]
at32f405 = ["at32f4xx-pac/at32f405", "f405-peripheral"]
at32f407 = ["at32f4xx-pac/at32f407", "f407-peripheral"]
at32f413 = ["at32f4xx-pac/at32f413", "f413-peripheral"]
at32f415 = ["at32f4xx-pac/at32f415", "f415-peripheral"]
at32f421 = ["at32f4xx-pac/at32f421", "f421-peripheral"]
at32f423 = ["at32f4xx-pac/at32f423", "f423-peripheral"]
at32f425 = ["at32f4xx-pac/at32f425", "f425-peripheral"]
at32f435 = ["at32f4xx-pac/at32f435", "f435-peripheral"]
at32f437 = ["at32f4xx-pac/at32f437", "f437-peripheral"]
at32wb415 = ["at32f4xx-pac/at32wb415", "wb415-peripheral"]

a403a-peripheral = [
    "legacy-gpio",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
f402-peripheral = [
    "new-gpio",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
f403-peripheral = [
    "legacy-gpio",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
f403a-peripheral = [
    "legacy-gpio",
    "gpiod",
    "gpioe",
    "tmr1",
    "tmr2",
    "tmr3",
    "tmr4",
    "tmr5",
    "tmr6",
    "tmr7",
    "tmr8",
    "tmr9",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
    "tmr14",
]
f405-peripheral = ["new-gpio", "tmr1", "tmr2", "tmr10", "tmr11", "tmr13"]
f407-peripheral = [
    "f403a-peripheral",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
f413-peripheral = ["legacy-gpio", "tmr1", "tmr2", "tmr10", "tmr11"]
f415-peripheral = [
    "legacy-gpio",
    "gpiod",
    "gpiof",
    "tmr1",
    "tmr2",
    "tmr3",
    "tmr4",
    "tmr5",
    "tmr9",
    "tmr10",
    "tmr11",
]
f421-peripheral = ["new-gpio", "gpiof", "tmr1"]
f423-peripheral = [
    "new-gpio",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
f425-peripheral = ["new-gpio", "gpiof", "tmr1", "tmr2"]
f435-peripheral = [
    "new-gpio",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
f437-peripheral = [
    "new-gpio",
    "tmr1",
    "tmr2",
    "tmr10",
    "tmr11",
    "tmr12",
    "tmr13",
]
wb415-peripheral = ["legacy-gpio", "tmr1", "tmr2", "tmr10", "tmr11"]

# Microcontroller has iomux perepheral and CFGLR/CFGHR registers
new-gpio = []
legacy-gpio = ["iomux"]

iomux = []

gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioi = []

tmr1 = []
tmr2 = []
tmr3 = []
tmr4 = []
tmr5 = []
tmr6 = []
tmr7 = []
tmr8 = []
tmr9 = []
tmr10 = []
tmr11 = []
tmr12 = []
tmr13 = []
tmr14 = []
tmr15 = []
tmr16 = []
tmr17 = []
tmr20 = []

usart1 = []
uart4 = []
uart5 = []
uart6 = []
uart7 = []

[[example]]
name = "blinky"

[[example]]
name = "pwm"

[[example]]
name = "qei"

[[example]]
name = "serial"

[[example]]
name = "timer-periph"

[[example]]
name = "timer-syst"
